# Niche-sauvage

./: .gitignore  README.md  Untitled Diagram.drawio  catkin_make.sh  obj_inter_semaines.txt  prog.txt  prog_semaine_deux.txt
aruco_detect/: CMakeLists.txt  README.md  package.xml  simu.launch
aruco_detect/launch/: simu.launch
aruco_detect/src/: aruco_test.py  calibrate_camera.py  traitement_image.py
bluerov/: CMakeLists.txt  package.xml
bluerov/launch/: play_topics.launch  run_bluerov.launch  run_command_bluerov.launch  run_joy_bluerov.launch  save_topics.launch  serial_rx.dump  serial_tx.dump  test_usbl.launch
bluerov/src/: Affichage_camera_launch_3.py  JoyCommand_Christophe_vs4.py  class_video.py  control_node.py  display_data_for_navigation.py  joy_and_command_node.py  (+6 more)
bluerov_msgs/: CMakeLists.txt  package.xml
bluerov_ros_camera/: CMakeLists.txt  package.xml
commande_rov/: CMakeLists.txt  package.xml
commande_rov_aruco/: CMakeLists.txt  package.xml  setup.py  simu.launch
control/: CMakeLists.txt  README.md  package.xml
detec_lum/: detec_lum.py  detec_lum_vid.py  node_lum.py
detect_lum/: CMakeLists.txt  package.xml
driver_usbl_ros/: CMakeLists.txt  package.xml
guerledan_usbl/: CMakeLists.txt  package.xml
images/: manette_notice.xcf
install/: install_Qgroundcontrol.sh  install_bluerov_gazebo.sh  install_mavros.sh  install_qr_code.sh  install_usbl_driver.sh
log_generator/: CMakeLists.txt  package.xml
qr_code_detect/: CMakeLists.txt  package.xml  simu.launch
simulation/: CMakeLists.txt  package.xml
usbl/: CMakeLists.txt  package.xml
(+54 files in other folders)
